{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 10,
  "lineage": "1ff6a823-d045-0219-c404-7a4fff34bc49",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/networkInterfaces/k3s-vm-nic",
            "internal_domain_name_suffix": "nturho4rydpubg5qmspbojm2qh.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/publicIPAddresses/k3s-vm-ip",
                "subnet_id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/virtualNetworks/k3s-vnet/subnets/k3s-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "westeurope",
            "name": "k3s-vm-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "k3s-test-rg"
          },
          "dependencies": [
            "azurerm_public_ip.vm_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/networkSecurityGroups/k3s-nsg",
            "location": "westeurope",
            "name": "k3s-nsg",
            "resource_group_name": "k3s-test-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/networkSecurityGroups/k3s-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "k3s-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "k3s-test-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/publicIPAddresses/k3s-vm-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.145.165.106",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "k3s-vm-ip",
            "resource_group_name": "k3s-test-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/virtualNetworks/k3s-vnet/subnets/k3s-subnet",
            "name": "k3s-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "k3s-test-rg",
            "virtual_network_name": "k3s-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/virtualNetworks/k3s-vnet/subnets/k3s-subnet",
            "network_security_group_id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/networkSecurityGroups/k3s-nsg",
            "subnet_id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/virtualNetworks/k3s-vnet/subnets/k3s-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bb13e96c-c0d1-40df-9bf0-649e17259c87",
            "id": "/subscriptions/b7b99826-3835-4054-891a-696b78a0d1ba/resourceGroups/k3s-test-rg/providers/Microsoft.Network/virtualNetworks/k3s-vnet",
            "location": "westeurope",
            "name": "k3s-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "k3s-test-rg"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}